When cache mode is CC_Refresh (the default), ensure the expiration date of a cache is consulated whenever a conditional GET cannot be performed.

Besides fixing bug# 104901, this improves performance by reducing unnecessary fetches
when caching is enabled.

BUG:104901